--- a/hackton2024/app/src/main/res/layout/activity_sign_up.xml
+++ b/hackton2024/app/src/main/res/layout/activity_sign_up.xml
@@ -8,15 +8,15 @@
     tools:context=".MainActivity">
 
     <FrameLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:src="@drawable/good_morning_img" />
+            android:src="@drawable/bg" />
 
     </FrameLayout>
 
@@ -38,33 +38,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/gotham"
-                android:text="Good "
+                android:text="הכנס את המידע שלך"
                 android:textColor="#ffffff"
                 android:textSize="32sp" />
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:fontFamily="@font/gotham"
-                android:text="Morning"
-                android:textColor="#ffffff"
-                android:textSize="32sp" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="2dp"
-                android:layout_marginTop="2dp"
-                android:background="#deff00" />
-
-        </LinearLayout>
 
     </LinearLayout>
 
@@ -74,8 +53,8 @@
     <TextView
         android:id="@+id/textTitle"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Shared Files History"
+        android:layout_height="0dp"
+        android:text=""
         android:gravity="center"
         android:textSize="18sp"
         android:textStyle="bold"
