--- a/hackton2024/app/src/main/res/layout/sign_up_q.xml
+++ b/hackton2024/app/src/main/res/layout/sign_up_q.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center_horizontal">
-\
 
     <TextView
         android:id="@+id/textView2"
@@ -13,7 +12,7 @@
         android:layout_height="wrap_content"
         android:textColor="#ffffff"
         android:text="TextView"
-        android:textSize="40dp" />
+        android:textSize="36dp"/>
 
     <EditText
         android:id="@+id/edit_query"
@@ -21,7 +20,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="20dp"
+        android:layout_marginBottom="100dp"
         android:textColor="#ffffff"
-        android:textSize="40dp"
+        android:textSize="20dp"
         android:inputType="text" />
 </LinearLayout>
