--- a/hackton2024/app/src/main/res/layout/activity_main.xml
+++ b/hackton2024/app/src/main/res/layout/activity_main.xml
@@ -66,110 +66,65 @@
 
         </LinearLayout>
 
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/next"/>
+
 
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/higher"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="32dp"
-        android:orientation="vertical"
-        android:paddingLeft="32dp"
-        android:paddingRight="32dp">
+        android:layout_marginTop="300dp"
+        android:layout_below="@+id/linearLayout"
+        android:gravity="center_horizontal">
 
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="75dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/relaxExercise"
+            android:text="relax Exercise"
+            android:textSize="20dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="80dp"
+            />
 
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColorHint="#96ffffff"
-            android:theme="@style/EditScreenTextInputLayoutStyle">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:drawablePadding="16dp"
-                android:drawableEnd="@drawable/ic_email_white_24dp"
-                android:fontFamily="@font/calibri"
-                android:hint="Email"
-                android:inputType="textEmailAddress"
-                android:maxLines="1"
-                android:textColor="@android:color/white"
-                android:textSize="16sp" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColorHint="#96ffffff"
-            android:theme="@style/EditScreenTextInputLayoutStyle">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:drawablePadding="16dp"
-                android:drawableEnd="@drawable/ic_lock_white_24dp"
-                android:fontFamily="@font/calibri"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:maxLines="1"
-                android:textColor="@android:color/white"
-                android:textSize="16sp" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="8dp"
-            android:gravity="center"
-            android:orientation="horizontal">
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:background="@drawable/buttonshapewhitebg"
-                android:fontFamily="@font/calibri"
-                android:text="Sign up"
-                android:textAllCaps="false"
-                android:textStyle="bold"
-                android:textColor="#96ffffff"
-                android:textSize="16sp" />
-
-            <Button
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:background="@drawable/buttonshapewhitebg"
-                android:fontFamily="@font/calibri"
-                android:text="Sign in"
-                android:textAllCaps="false"
-                android:textColor="#96ffffff"
-                android:textSize="16sp"
-                android:textStyle="bold" />
-
-
-        </LinearLayout>
-
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:fontFamily="@font/calibri"
-            android:text="Forgot Password?"
-            android:textAlignment="center"
-            android:textColor="#96ffffff"
-            android:textSize="16sp" />
-
-
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="75dp"
+            android:layout_centerHorizontal="true"
+            android:text="admin Page"
+            android:textSize="20dp"
+            android:id="@+id/adminPage"
+            android:layout_marginTop="80dp"
+            />
     </LinearLayout>
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/higher"
+        android:gravity="center_horizontal">
 
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="75dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/settings"
+            android:text="settings"
+            android:textSize="20dp"
+            android:layout_marginRight="30dp"
+            android:layout_marginTop="40dp"
+            />
+
+        <Button
+            android:layout_width="150dp"
+            android:layout_height="75dp"
+            android:layout_centerHorizontal="true"
+            android:id="@+id/signUp"
+            android:textSize="20dp"
+            android:text="sign Up"
+            android:layout_marginTop="40dp"
+            />
+    </LinearLayout>
 </RelativeLayout>
