--- a/hackton2024/app/src/main/res/layout/activity_settings.xml
+++ b/hackton2024/app/src/main/res/layout/activity_settings.xml
@@ -38,11 +38,13 @@
         tools:layout_editor_absoluteY="1dp">
 
         <ImageButton
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
             android:scaleType="fitCenter"
+            android:background="@android:color/transparent"
             android:layout_marginLeft="50dp"
-            android:src="@drawable/user" />
+            android:layout_marginTop="20sp"
+            android:src="@drawable/ass" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -64,13 +66,16 @@
 
             <CheckBox
                 android:id="@+id/checkBox"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
                 android:layout_weight="1"
-                android:textSize="30sp"
+                android:textSize="20sp"
                 android:textColor="#ffffff"
-                android:layout_marginLeft="100dp"
-                android:text="התראות לאיש הקשר" />
+                android:layout_marginRight="70dp"
+                android:layout_marginLeft="125dp"
+                android:text="התראות לאיש הקשר"
+                android:scaleX="1.5"
+                android:scaleY="1.5"/>
 
 
         </LinearLayout>
