--- a/hackton2024/app/src/main/res/layout/activity_alert.xml
+++ b/hackton2024/app/src/main/res/layout/activity_alert.xml
@@ -1,9 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".alert">
+    android:orientation="vertical"
+    tools:context=".alert"
+    android:background="@drawable/good_morning_img">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <TextView
+        android:id="@+id/tv1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:text="תומר התקף זוהה"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff"
+        android:textSize="35dp"
+        android:layout_marginTop="40dp"
+        android:fontFamily="@font/gotham"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="30dp"/>
+
+    <TextView
+        android:id="@+id/tv2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="10dp"
+        android:text="הודענו לאנשי הקשר שלך"
+        android:layout_centerHorizontal="true"
+        android:textColor="#ffffff"
+        android:textSize="35dp"
+        android:fontFamily="@font/gotham"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="30dp"/>
+    
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="לחץ לקו סיוע חם"/>
+
+</LinearLayout>
