--- a/hackton2024/app/src/main/res/layout/activity_main.xml
+++ b/hackton2024/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,11 @@
     android:focusableInTouchMode="true"
     tools:context=".MainActivity">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal"></LinearLayout>
+
     <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
@@ -38,11 +43,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/gotham"
-                android:text="Good "
+                android:text=" טוב"
                 android:textColor="#ffffff"
                 android:textSize="32sp" />
 
         </LinearLayout>
+
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -54,7 +60,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/gotham"
-                android:text="Morning"
+                android:text="בוקר"
                 android:textColor="#ffffff"
                 android:textSize="32sp" />
 
@@ -68,6 +74,35 @@
 
 
 
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/dont"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/linearLayout"
+        android:layout_marginTop="50dp"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/dontLet"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/gotham"
+            android:text="אל תתן לטראומה לשנות"
+            android:textColor="#ffffff"
+            android:textSize="35sp" />
+
+        <TextView
+            android:id="@+id/dontLet2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/gotham"
+            android:text="את מי שאתה"
+            android:textColor="#ffffff"
+            android:textSize="50sp" />
     </LinearLayout>
 
     <LinearLayout
