--- a/hackton2024/app/src/main/res/layout/activity_alert.xml
+++ b/hackton2024/app/src/main/res/layout/activity_alert.xml
@@ -36,6 +36,7 @@
         android:layout_marginBottom="30dp"/>
 
     <Button
+        android:id="@+id/btnBreath"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
