--- a/hackton2024/app/src/main/res/layout/activity_alert.xml
+++ b/hackton2024/app/src/main/res/layout/activity_alert.xml
@@ -52,6 +52,7 @@
         android:textSize="30dp"
         android:text="מוזיקה מרגיעה"/>
     <Button
+        android:id="@+id/btnCall"
         android:layout_width="300dp"
         android:layout_marginTop="350dp"
         android:layout_height="wrap_content"
