--- a/hackton2024/app/src/main/res/layout/activity_settings.xml
+++ b/hackton2024/app/src/main/res/layout/activity_settings.xml
@@ -38,6 +38,7 @@
         tools:layout_editor_absoluteY="1dp">
 
         <ImageButton
+            android:id="@+id/btnImage"
             android:layout_width="70dp"
             android:layout_height="70dp"
             android:scaleType="fitCenter"
